--- a/src/componentstyles/Hero.css
+++ b/src/componentstyles/Hero.css
@@ -54,8 +54,22 @@
 }
 
 /* Smartphones (landscape) ----------- */
-@media only screen and (min-width : 321px) {
+@media only screen and (max-width : 565px) {
     /* Styles */
+    .hero-section-columns {
+        gap: 20px;
+        flex-direction: column;
+    }
+
+    .hero-section-column-two {
+        display: flex;
+        justify-content: center;
+    }
+
+    .hero-section-ivanthedevbot {
+        height: 300px;
+        width: 300px;
+    }
 }
 
 /* Smartphones (portrait) ----------- */
@@ -79,7 +93,7 @@
 }
 
 /* iPads (landscape) ----------- */
-@media only screen and (min-device-width : 768px) and (orientation : landscape) {
+@media only screen and (max-device-width : 768px) and (orientation : landscape) {
     /* Styles */
     .hero-section-columns {
         gap: 20px;
