--- a/src/componentstyles/Skills.css
+++ b/src/componentstyles/Skills.css
@@ -1,5 +1,5 @@
 .skills-section {
-    padding: 8% 5%;
+    padding: 3% 5%;
     background-color: hsl(0, 0%, 15%);
     display: flex;
     flex-direction: column;
@@ -32,6 +32,8 @@
 .skills-section-paragraph-hook p {
     text-align: center;
     padding-bottom: 10px;
+    letter-spacing: 0.05rem;
+    line-height: 1.6rem;
 }
 
 .skill-set-icons {
@@ -49,8 +51,12 @@
 }
 
 /* Smartphones (landscape) ----------- */
-@media only screen and (min-width : 321px) {
+@media only screen and (max-width : 565px) {
     /* Styles */
+    .skill-set-icons {
+        max-width: none;
+        padding: 0 1rem;
+    }
 }
   
   /* Smartphones (portrait) ----------- */
@@ -63,7 +69,7 @@
 }
 
 /* iPads (landscape) ----------- */
-@media only screen and (min-device-width : 768px) and (orientation : landscape) {
+@media only screen and (max-device-width : 768px) and (orientation : landscape) {
     /* Styles */
   }
   
